crates/keel-tui/src/snapshots/keel_tui__app__tests__tui_artifact_groups.snap
---
source: crates/keel-tui/src/app.rs
assertion_line: 1028
expression: "crate::ui::render_to_string(&mut app, 120, 32)"
---
"Keel                    Ready       Not Ready       Running        Discarded        Committed       Pushed        PR    "
"local AI code review      1             0              0               0                1              0           0    "
"                                                                                                                        "
"                                                                                                                        "
"────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────"
"┌Runs (1/1, newest first)───────────────────────────┐┌─────────────────────────────────────────────────────────────────┐"
"│Run      Decision State    Task             Git    ││run-123  review  task                                            │"
"│run-123  review   ready    task             commit ││Next: ready for human review  Agent noop                         │"
"│                                                   │└─────────────────────────────────────────────────────────────────┘"
"│                                                   │ Report │ Diff + │ Log + │ Artifacts                               "
"│                                                   │                                                                   "
"│                                                   │───────────────────────────────────────────────────────────────────"
"│                                                   │┌Artifacts────────────────────────────────────────────────────────┐"
"│                                                   ││Review artifacts                                                 │"
"│                                                   ││Metadata  present .keel/runs/run-123/metadata.json               │"
"│                                                   ││Log       present .keel/runs/run-123/log.txt                     │"
"│                                                   ││Diff      present .keel/runs/run-123/diff.patch                  │"
"│                                                   ││Checks    present .keel/runs/run-123/checks.json                 │"
"│                                                   ││Report    present .keel/runs/run-123/report.md                   │"
"│                                                   ││                                                                 │"
"│                                                   ││Git artifacts                                                    │"
"│                                                   ││Commit    present .keel/runs/run-123/commit.json                 │"
"│                                                   ││Push      not yet .keel/runs/run-123/push.json                   │"
"│                                                   ││PR/MR     not yet .keel/runs/run-123/pr.json                     │"
"│                                                   ││                                                                 │"
"│                                                   ││                                                                 │"
"│                                                   ││                                                                 │"
"│                                                   ││                                                                 │"
"│                                                   ││                                                                 │"
"└───────────────────────────────────────────────────┘└─────────────────────────────────────────────────────────────────┘"
"────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────"
"j/k g/G 1-4 Tab / ? PgUp/PgDn r q  REVIEW  filter: <none>                                                               "
