crates/keel-tui/src/snapshots/keel_tui__app__tests__tui_colored_diff_review.snap
---
source: crates/keel-tui/src/app.rs
assertion_line: 973
expression: "crate::ui::render_to_string(&mut app, 120, 32)"
---
"Keel                    Ready       Not Ready       Running        Discarded        Committed       Pushed        PR    "
"local AI code review      1             0              0               0                0              0           0    "
"                                                                                                                        "
"                                                                                                                        "
"────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────"
"┌Runs (1/1, newest first)───────────────────────────┐┌─────────────────────────────────────────────────────────────────┐"
"│Run      State    Review   Task             Git    ││run-diff  ready  task                                            │"
"│run-diff ready    review   task             -      ││Next: ready for human review                                     │"
"│                                                   │└─────────────────────────────────────────────────────────────────┘"
"│                                                   │ Report │ Diff │ Log │ Artifacts                                   "
"│                                                   │                                                                   "
"│                                                   │───────────────────────────────────────────────────────────────────"
"│                                                   │┌Diff─────────────────────────────────────────────────────────────┐"
"│                                                   ││diff --git a/file b/file                                         │"
"│                                                   ││index 1111111..2222222 100644                                    │"
"│                                                   ││--- a/file                                                       │"
"│                                                   ││+++ b/file                                                       │"
"│                                                   ││@@ -1,2 +1,2 @@                                                  │"
"│                                                   ││-old line                                                        │"
"│                                                   ││+new line                                                        │"
"│                                                   ││ context                                                         │"
"│                                                   ││                                                                 │"
"│                                                   ││                                                                 │"
"│                                                   ││                                                                 │"
"│                                                   ││                                                                 │"
"│                                                   ││                                                                 │"
"│                                                   ││                                                                 │"
"│                                                   ││                                                                 │"
"│                                                   ││                                                                 │"
"└───────────────────────────────────────────────────┘└─────────────────────────────────────────────────────────────────┘"
"────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────"
"j/k Tab / ? PgUp/PgDn r q  REVIEW  filter: <none>                                                                       "
