crates/keel-tui/src/snapshots/keel_tui__app__tests__tui_filtered_empty_state.snap
---
source: crates/keel-tui/src/app.rs
assertion_line: 1063
expression: "crate::ui::render_to_string(&mut app, 120, 26)"
---
"Keel  review           Ready 0     Not Ready 1     Running 0      Discarded 0      Committed 0     Pushed 0      PR 0   "
"────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────"
"┌───────────────────────────────────────────────────┐┌─────────────────────────────────────────────────────────────────┐"
"│ No runs match filter: agent: codex, status: ready ││                        No selected run.                         │"
"│                                                   ││                                                                 │"
"│                                                   ││                                                                 │"
"│                                                   ││                                                                 │"
"│                                                   ││                                                                 │"
"│                                                   ││                                                                 │"
"│                                                   ││                                                                 │"
"│                                                   ││                                                                 │"
"│                                                   ││                                                                 │"
"│                                                   ││                                                                 │"
"│                                                   ││                                                                 │"
"│                                                   ││                                                                 │"
"│                                                   ││                                                                 │"
"│                                                   ││                                                                 │"
"│                                                   ││                                                                 │"
"│                                                   ││                                                                 │"
"│                                                   ││                                                                 │"
"│                                                   ││                                                                 │"
"│                                                   ││                                                                 │"
"│                                                   ││                                                                 │"
"└───────────────────────────────────────────────────┘└─────────────────────────────────────────────────────────────────┘"
"────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────"
"Move j/k g/G  Tabs 1-4 Tab  Filter /  Help ?  Scroll PgUp/PgDn  Refresh r  Quit q  REVIEW  filter: agent: codex, st…    "
