crates/keel-tui/src/snapshots/keel_tui__app__tests__tui_help_overlay.snap
---
source: crates/keel-tui/src/app.rs
assertion_line: 1013
expression: "crate::ui::render_to_string(&mut app, 120, 34)"
---
"                                                                                                                        "
"                                                                                                                        "
"    ┌Help──────────────────────────────────────────────────────────────────────────────────────────────────────────┐    "
"    │Keel TUI Help                                                                                                 │    "
"    │                                                                                                              │    "
"    │Navigation                                                                                                    │    "
"    │j / Down      select next run                                                                                 │    "
"    │k / Up        select previous run                                                                             │    "
"    │g / G         jump to first or last visible run                                                               │    "
"    │PgUp / PgDn   scroll the current detail tab                                                                   │    "
"    │Home / End    jump to top or bottom of detail                                                                 │    "
"    │                                                                                                              │    "
"    │Tabs                                                                                                          │    "
"    │1 / 2         open report or diff                                                                             │    "
"    │3 / 4         open log or artifacts                                                                           │    "
"    │Tab           next detail tab                                                                                 │    "
"    │Shift+Tab     previous detail tab                                                                             │    "
"    │                                                                                                              │    "
"    │Review                                                                                                        │    "
"    │/             filter runs by id, task, status, agent, warning, or git state                                   │    "
"    │r             refresh run list and selected artifacts                                                         │    "
"    │?             show or hide this help                                                                          │    "
"    │                                                                                                              │    "
"    │Safety Boundary                                                                                               │    "
"    │Read-only: never commits, pushes, creates PRs, discards runs, merges, or edits artifacts.                     │    "
"    │Use CLI write commands only after reviewing report, diff, log, checks, and warnings.                          │    "
"    │Human review remains the final merge decision.                                                                │    "
"    │                                                                                                              │    "
"    │Close  Esc / Enter / ?    Quit  q                                                                             │    "
"    │                                                                                                              │    "
"    │                                                                                                              │    "
"    └──────────────────────────────────────────────────────────────────────────────────────────────────────────────┘    "
"                                                                                                                        "
"                                                                                                                        "
