crates/keel-tui/src/snapshots/keel_tui__app__tests__tui_narrow_review_layout.snap
---
source: crates/keel-tui/src/app.rs
assertion_line: 981
expression: "crate::ui::render_to_string(&mut app, 92, 34)"
---
"Keel  Ready 0  NotReady 1  Running 0  Git c0 p0 pr0                                         "
"────────────────────────────────────────────────────────────────────────────────────────────"
"┌Runs (1/1, newest first)──────────────────────────────────────────────────────────────────┐"
"│Run          Decision       State      Task                                        Git    │"
"│run-narrow   blocked        not_ready  investigate failing narrow termina…         -      │"
"│                                                                                          │"
"│                                                                                          │"
"│                                                                                          │"
"│                                                                                          │"
"└──────────────────────────────────────────────────────────────────────────────────────────┘"
"┌──────────────────────────────────────────────────────────────────────────────────────────┐"
"│run-narrow  blocked  investigate failing narrow terminal review layou…                    │"
"│Next: not ready: inspect checks and logs  Agent noop                                      │"
"└──────────────────────────────────────────────────────────────────────────────────────────┘"
" Report │ Diff + │ Log + │ Artifacts                                                        "
"                                                                                            "
"────────────────────────────────────────────────────────────────────────────────────────────"
"┌Review Summary (1-13/16)──────────────────────────────────────────────────────────────────┐"
"│not_ready  not ready: inspect checks and logs                                             │"
"│Task       investigate failing narrow terminal review layout                              │"
"│Risk       none  Checks 1/2 failed  Git candidate                                         │"
"│Agent      noop  Branch keel/run/run-narrow                                               │"
"│Ready      failed checks: cargo test                                                      │"
"│                                                                                          │"
"│Progress                                                                                  │"
"│Git        commit:no  push:no  pr:no                                                      │"
"│Next       fix or rerun; commit/push are blocked                                          │"
"│                                                                                          │"
"│Checks                                                                                    │"
"│✗ cargo test  failed  exit 101                                                            │"
"│✓ git status  passed  exit 0                                                              │"
"└──────────────────────────────────────────────────────────────────────────────────────────┘"
"────────────────────────────────────────────────────────────────────────────────────────────"
"Move j/k  Tabs 1-4  Scroll PgUp/PgDn  Filter /  Help ?  Quit q  REVIEW                      "
