crates/keel-tui/src/snapshots/keel_tui__app__tests__tui_not_ready_failure_summary.snap
---
source: crates/keel-tui/src/app.rs
assertion_line: 894
expression: "crate::ui::render_to_string(&mut app, 120, 32)"
---
"Keel                    Ready       Not Ready       Running        Discarded        Committed       Pushed        PR    "
"local AI code review      0             1              0               0                0              0           0    "
"                                                                                                                        "
"                                                                                                                        "
"────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────"
"┌Runs (1/1, newest first)───────────────────────────┐┌─────────────────────────────────────────────────────────────────┐"
"│Run      State    Review   Task             Git    ││run-failed  not_ready  task                                      │"
"│run-fail not_read blocked  task             -      ││Next: not ready: inspect checks and logs                         │"
"│                                                   │└─────────────────────────────────────────────────────────────────┘"
"│                                                   │ Report │ Diff │ Log │ Artifacts                                   "
"│                                                   │                                                                   "
"│                                                   │───────────────────────────────────────────────────────────────────"
"│                                                   │┌Review Focus─────────────────────────────────────────────────────┐"
"│                                                   ││not_ready  not ready: inspect checks and logs                    │"
"│                                                   ││Task       task                                                  │"
"│                                                   ││Risk       none  Checks 1/2 failed  Git candidate                │"
"│                                                   ││Agent      noop  Branch keel/run/run-failed                      │"
"│                                                   │└─────────────────────────────────────────────────────────────────┘"
"│                                                   │┌Checks───────────────────────────────────────────────────────────┐"
"│                                                   ││✗ cargo test  failed  exit 101                                   │"
"│                                                   ││✓ git status  passed  exit 0                                     │"
"│                                                   ││                                                                 │"
"│                                                   │└─────────────────────────────────────────────────────────────────┘"
"│                                                   │┌Risk Warnings────────────────────────────────────────────────────┐"
"│                                                   ││none                                                             │"
"│                                                   ││                                                                 │"
"│                                                   │└─────────────────────────────────────────────────────────────────┘"
"│                                                   │┌Suggested Next Actions───────────────────────────────────────────┐"
"│                                                   ││Review report, diff, log, checks, and warnings before merging.   │"
"└───────────────────────────────────────────────────┘└─────────────────────────────────────────────────────────────────┘"
"────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────"
"j/k Tab / ? PgUp/PgDn r q  REVIEW  filter: <none>                                                                       "
