crates/keel-tui/src/snapshots/keel_tui__app__tests__tui_read_only_review_layout.snap
---
source: crates/keel-tui/src/app.rs
expression: "crate::ui::render_to_string(&mut app, 120, 32)"
---
"Keel review            Ready 1     Not Ready 0     Running 0      Discarded 0      Committed 1     Pushed 1      PR 0   "
"────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────"
"┌Review queue (1/1, newest first)─────────┐┌───────────────────────────────────────────────────────────────────────────┐"
"│Run            Agent    State            ││run-...123  review  task                                                   │"
"│run-...123     noop     review           ││Action: CLI: keel pr run-123 --manual --dry-run  Agent noop                │"
"│                                         │└───────────────────────────────────────────────────────────────────────────┘"
"│                                         │ Report │ Diff + │ Log + │ Artifacts                                         "
"│                                         │                                                                             "
"│                                         │─────────────────────────────────────────────────────────────────────────────"
"│                                         │┌Current Decision───────────────────────────────────────────────────────────┐"
"│                                         ││ready  ready for human review                                              │"
"│                                         ││Task       task                                                            │"
"│                                         ││Evidence   none  Checks 1 passed                                           │"
"│                                         ││Agent      noop  Branch keel/run/run-123                                   │"
"│                                         │└───────────────────────────────────────────────────────────────────────────┘"
"│                                         │┌Next CLI Step──────────────────────────────────────────────────────────────┐"
"│                                         ││Commit     yes  local commit recorded                                      │"
"│                                         ││Push       yes  remote keel/run/run-123                                    │"
"│                                         ││PR/MR      no   not created                                                │"
"│                                         ││Next       CLI: keel pr run-123 --manual --dry-run                         │"
"│                                         │└───────────────────────────────────────────────────────────────────────────┘"
"│                                         │┌Checks─────────────────────────────────────────────────────────────────────┐"
"│                                         ││✓ cargo test  passed  exit 0                                               │"
"│                                         ││                                                                           │"
"│                                         ││                                                                           │"
"│                                         ││                                                                           │"
"│                                         │└───────────────────────────────────────────────────────────────────────────┘"
"│                                         │┌Risk Warnings──────────────────────────────────────────────────────────────┐"
"│                                         ││none                                                                       │"
"└─────────────────────────────────────────┘└───────────────────────────────────────────────────────────────────────────┘"
"────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────"
"Move j/k g/G  Tabs 1-4 Tab  Filter /  Help ?  Scroll PgUp/PgDn  Refresh r  Quit q  REVIEW  filter: <none>               "
