crates/keel-tui/src/snapshots/keel_tui__app__tests__tui_scrolled_report_summary.snap
---
source: crates/keel-tui/src/app.rs
assertion_line: 998
expression: "crate::ui::render_to_string(&mut app, 92, 28)"
---
"Keel  Ready 0  NotReady 1  Running 0  Git c0 p0 pr0                                         "
"────────────────────────────────────────────────────────────────────────────────────────────"
"┌Runs (1/1, newest first)──────────────────────────────────────────────────────────────────┐"
"│Run          Decision       State      Task                                        Git    │"
"│run-scrolled blocked        not_ready  task                                        -      │"
"│                                                                                          │"
"│                                                                                          │"
"│                                                                                          │"
"│                                                                                          │"
"└──────────────────────────────────────────────────────────────────────────────────────────┘"
"┌──────────────────────────────────────────────────────────────────────────────────────────┐"
"│run-scrolled  blocked  task                                                               │"
"│Next: not ready: inspect checks and logs  Agent noop                                      │"
"└──────────────────────────────────────────────────────────────────────────────────────────┘"
" Report │ Diff │ Log │ Artifacts                                                            "
"                                                                                            "
"────────────────────────────────────────────────────────────────────────────────────────────"
"┌Review Summary (5-11/13)──────────────────────────────────────────────────────────────────┐"
"│... 4 lines above ...                                                                     │"
"│Ready      failed checks: cargo test                                                      │"
"│Run        run-scrolled  Base base                                                        │"
"│                                                                                          │"
"│Checks                                                                                    │"
"│✗ cargo test  failed  exit 101                                                            │"
"│✓ git status  passed  exit 0                                                              │"
"└──────────────────────────────────────────────────────────────────────────────────────────┘"
"────────────────────────────────────────────────────────────────────────────────────────────"
"j/k g/G 1-4 Tab / ? PgUp/PgDn r q  REVIEW  filter: <none>                                   "
